tdf#143692 writerfilter: fix outlineLevel import x3

First, illegal values don't mean "use body level".
It means "inherit the value value from the style".
So just ignore illegal values.

Secondly, styles without any explicit setting (a -1)
where being incorrectly specified as "-1 + 1",
i.e. body level(0) - meaning that inheritance was always lost.

Thirdly, the body level value is necessary in order to cancel inheritance
from a style. So the style must be able to set a value of 9.

Change-Id: I2161085181527fb321dbcc00636513330dd8ca1a